# lenslapse

./: .gitignore  LICENSE  README.md  fidelity_report.json  pyproject.toml  tox.ini
.github/workflows/: ci.yml  deploy-pages.yml  publish-pypi.yml  tests.yml
docs/: advanced-usage.md  conf.py  deployment.md  index.md  model-card.md
lenslapse/: __init__.py  add_model.py  arch.py  check_arch_parity.py  cli.py  client.py  export_checkpoints.py  fidelity_eval.py  precompute_lens.py  prompts_zh.json  server.py  sources.py
lenslapse/webapp/: index.html
lenslapse/webapp/about/: index.html
lenslapse/webapp/about/ja/: index.html
lenslapse/webapp/assets/: about-7UHfnYhE.css  export-B0I1K_qR.js  export-BuluR0XY.js  export-C4lraCUl.js  export-CRwl7U2V.js  export-CYe1vN2v.js  export-Cg84wk1F.js  export-CuiGnFIE.js  export-D-3tzlag.js  export-DD9ARvC5.js  export-DVplyBQ6.js  export-DtU-fwex.js  export-DvCjkPgj.js  index-dUIc2W-G.js  index-xwFHsPDl.css  index.es-BrVXS93v.js  index.es-Bt-U0RL_.js  index.es-C3p-8Wcv.js  index.es-CWsTDEgk.js  index.es-CkJS2xD-.js  index.es-Cx8OuXR0.js  index.es-D4AekDyh.js  index.es-DmK0wqLZ.js  index.es-H7QwnO-3.js  index.es-KXzvwWvR.js  index.es-SHO5JSp6.js  jspdf.es.min-0uzTKY6z.js  jspdf.es.min-BSxkQcjK.js  jspdf.es.min-BikKwV0J.js  jspdf.es.min-D4UrJsQY.js  jspdf.es.min-DfI_A2_H.js  jspdf.es.min-DpUIdGMM.js  jspdf.es.min-DyymOCf7.js  jspdf.es.min-I5Bwf18U.js  jspdf.es.min-NtbuL973.js  jspdf.es.min-QUsx-1ut.js  jspdf.es.min-p-mHH9bU.js  main-B1iBzin4.js  main-BAkEtm-r.css  main-BFaZD09b.js  (+13 more)
scripts/: add_model.py  arch.py  build_docs.sh  bundle_webapp.sh  check_arch_parity.py  export_checkpoints.py  fidelity_eval.py  precompute_lens.py
server/: probe_server.py
src/lenslapse/: __init__.py  add_model.py  arch.py  check_arch_parity.py  cli.py  export_checkpoints.py  fidelity_eval.py  logging_utils.py  onnx_f16.py  precompute_lens.py  prompts_zh_en.json  server.py  sources.py  webdata.py
src/lenslapse/webapp/: index.html
src/lenslapse/webapp/about/: index.html
src/lenslapse/webapp/assets/: about-DUmNoZfW.css  export-BA19dDE6.js  export-BoHToqDd.js  export-CKNa2Ulw.js  export-Dp9pL3Vg.js  export-HMf-g4Y_.js  index.es-BTuK3e1Y.js  index.es-C3UoS75I.js  index.es-Cr1paQmx.js  index.es-DXUWM0zF.js  index.es-DuNPtqNE.js  index.es-P-5ZUPoy.js  jspdf.es.min-BkMg5hRJ.js  jspdf.es.min-CIHimZYm.js  jspdf.es.min-DEHNnnx-.js  jspdf.es.min-DK3iEpgP.js  jspdf.es.min-DLC1rFvO.js  jspdf.es.min-DOTX8VSr.js  main-BLxGeV0Q.js  main-D0Nw5MM4.js  main-DNqYH6Le.js  main-DgmZAW9C.js  main-_KXl2PBp.js
tests/: test_arch.py  test_client.py  test_export_checkpoints.py  test_precompute_lens.py  test_server.py  test_sources.py
tests/lenslapse/: test_arch.py  test_client.py  test_precompute_lens.py  test_server.py  test_sources.py  test_target_stats.py  test_version.py  test_webdata.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/about/: about.css  index.html
web/about/ja/: index.html
web/bench/: bench.mjs
web/public/data/: models.json
web/public/data/Llama-EN-0.5B-PT/: index.json  p13.json  p9.json
web/public/data/aquila-135m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p16.json  p17.json  p2.json  p20.json  p21.json  p23.json  p24.json  p25.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/bloom-560m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p17.json  p18.json  p2.json  p21.json  p23.json  p24.json  p25.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/gemma3-270m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p16.json  p17.json  p18.json  p19.json  p2.json  p20.json  p21.json  p22.json  p23.json  p24.json  p25.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/gpt2/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/mapneo-250m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p16.json  p17.json  p18.json  p19.json  p2.json  p20.json  p21.json  p22.json  p23.json  p24.json  p25.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/opt-125m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/pythia-14m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/pythia-160m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/pythia-70m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/qwen3-0.6b/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p16.json  p17.json  p18.json  p19.json  p2.json  p20.json  p21.json  p22.json  p23.json  p24.json  p25.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
web/public/data/smollm2-135m/: index.json  p0.json  p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  (+2 more)
web/src/: auth.js  auth.ts  color.js  color.ts  data.js  data.ts  export.js  export.ts  grid.js  grid.ts  live.js  live.ts  main.js  main.ts  manage.js  manage.ts  probeStore.js  probeStore.ts  race.ts  snippets.ts  style.css  traj.js  traj.ts  ui.js  ui.ts
web/tests/: color.test.ts  data.acquisition.test.ts  data.test.ts  live.resolveProbeUrl.public.test.ts  live.resolveProbeUrl.test.ts  live.topkSoftmax.test.ts  probeStore.test.ts  race.test.ts  snippets.test.ts  traj.test.ts  ui.test.ts
(+13 files in other folders)
