[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lenslapse"
version = "0.1.0"
description = "In-browser logit lens over training checkpoints: conversion pipeline and local probe server"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.13",
    "transformers>=4.50",
    "onnx>=1.17",
    "onnxscript>=0.1",
    "onnxruntime>=1.20",
    "numpy>=2.0",
    "huggingface_hub>=0.26",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.scripts]
lenslapse = "lenslapse.cli:main"

[project.optional-dependencies]
# kept for the documented `pip install -e ".[server]"` command; the server deps are now core
server = ["fastapi>=0.115", "uvicorn>=0.30", "pydantic>=2.0"]

[tool.setuptools]
packages = ["lenslapse"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["lenslapse"]

[tool.ruff.format]
quote-style = "double"
