[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lenslapse"
version = "0.1.0"
description = "In-browser logit lens over training checkpoints: conversion pipeline and local probe server"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.13",
    "transformers>=4.50",
    "onnx>=1.17",
    "onnxscript>=0.1",
    "onnxruntime>=1.20",
    "numpy>=2.0",
    "huggingface_hub>=0.26",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.scripts]
lenslapse = "lenslapse.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "httpx>=0.27",
    "tox>=4.21.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["lenslapse"]

# the web app's precomputed shards and tokenizers live in web/public (tracked in git);
# bundling them next to the committed app shell makes `lenslapse server` fully self-contained
[tool.hatch.build.targets.wheel.force-include]
"web/public/data" = "lenslapse/webapp/data"
"web/public/tokenizer" = "lenslapse/webapp/tokenizer"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["lenslapse"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "onnx.*", "onnxruntime.*", "huggingface_hub.*", "uvicorn.*", "numpy.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
