[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lenslapse"
version = "0.1.1"
description = "In-browser logit lens over training checkpoints: conversion pipeline and local probe server"
authors = [{ name = "Tatsuki Okada", email = "tatsukio0522@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["interpretability", "logit-lens", "llm", "training-dynamics", "onnx", "mechanistic-interpretability"]
dependencies = [
    "torch>=2.13",
    # <5: transformers v5's LlamaTokenizer overrides the checkpoint's own tokenizer definition
    # (same-root regression as https://github.com/huggingface/transformers/issues/45488, reported
    # there for DeepSeek's ByteLevel BPE); for sarashina-style unigram SentencePiece models it
    # manifests as single-character tokenization. >=4.57: the `dtype=` kwarg this package uses is
    # silently dropped before 4.56, and 4.57 is the verified series.
    "transformers>=4.57,<5",
    # Llama-family tokenizers with legacy=False load through sentencepiece + protobuf in v4
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    "onnx>=1.17",
    "onnxscript>=0.1",
    "onnxruntime>=1.20",
    "numpy>=2.0",
    "huggingface_hub>=0.26",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "tiktoken>=0.13.0",
    "fire>=0.7.1",
]

[project.urls]
Homepage = "https://iamtatsuki05.github.io/lenslapse/about/"
Issues = "https://github.com/iamtatsuki05/lenslapse/issues"

[project.scripts]
lenslapse = "lenslapse.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "httpx>=0.27",
    "tox>=4.21.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/lenslapse"]

# Only the catalog is bundled — per-model shards/tokenizers are ~180MB total, over PyPI's
# 100MB per-file limit, so lenslapse/webdata.py fetches those from GitHub on first use instead
# (see its module docstring). A repo checkout still has the full web/public/data|tokenizer on
# disk and never hits that path.
[tool.hatch.build.targets.wheel.force-include]
"web/public/data/models.json" = "lenslapse/webapp/data/models.json"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["lenslapse"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "onnx.*", "onnxruntime.*", "huggingface_hub.*", "uvicorn.*", "numpy.*", "fire.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
